<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/nombre_evento"
            android:layout_width="300dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nombre_evento"/>
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/estilo_musica"
                android:layout_width="300dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/estilo"/>
        </android.support.design.widget.TextInputLayout>


        <EditText
            android:id="@+id/description"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/descripcion"
            android:inputType="text"
            />
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="300dp"
            android:longClickable="true"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="200dp"
            tools:context="com.example.albert.partymaps.MapsActivity" />




    </LinearLayout>
</ScrollView>
