<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/buscar_eventos"
    android:layout_gravity="center"
    android:background="@drawable/backgroundlogin"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.albert.partymaps.BuscarEventoFragment"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar_evento"
        android:textSize="@dimen/h2"
        android:id="@+id/buscar_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/text_margin"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/buscar_title"
        android:id="@+id/buscar_por_nombre"
        android:layout_marginBottom="8dp">
        <EditText
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:id="@+id/bpn"
            android:layout_height="wrap_content"
            android:hint="Buscar por nombre"/>
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="@dimen/edit_width"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/buscar_por_localidad"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_below="@id/buscar_por_nombre"
        ></Spinner>

    <Spinner
        android:layout_width="@dimen/edit_width"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/text_margin"
        android:id="@+id/estilo_de_musica"
        android:layout_below="@id/buscar_por_localidad"
        ></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distancia"
        android:layout_marginTop="13dp"
        android:layout_alignStart="@+id/estilo_de_musica"
        android:textSize="16dp"
        android:layout_below="@+id/estilo_de_musica"/>

    <Switch
        android:id="@+id/buscar_distancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buscar_boton"
        android:layout_below="@+id/estilo_de_musica"
        android:theme="@style/estiloSwitch"
        android:layout_marginTop="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numero_kilometros"
        android:layout_below="@+id/buscar_distancia"
        android:layout_alignStart="@id/estilo_de_musica"
        android:layout_marginTop="13dp"
        android:textSize="16dp"
        android:text="@string/kilometros"/>

    <SeekBar
        android:layout_width="@dimen/edit_width"
        android:layout_height="wrap_content"
        android:id="@+id/kilometros"
        android:layout_below="@+id/numero_kilometros"
        android:layout_alignStart="@id/estilo_de_musica"
        android:layout_marginTop="5dp"
        android:progress="5"
        android:enabled="false"
        android:max="25"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buscar_boton"
        android:layout_width="@dimen/edit_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/kilometros"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/buscar_evento"/>

</RelativeLayout>
